# calendar-qa

./: .gitignore  Cargo.toml
docs/: report.md.txt
src/: main.rs
src/data/: dataset.rs  loader.rs  mod.rs
src/inference/: mod.rs  predictor.rs
src/model/: mod.rs  transformer.rs
src/training/: mod.rs  trainer.rs
