[package]
name = "calendar-qa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
burn = { version = "=0.20.1", features = ["train", "wgpu", "autodiff"] }
clap = { version = "4.0", features = ["derive"] }
docx-rs = "0.4"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.15"